--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:targetSdkVersion="18" />
 
     <application
+        android:name="com.example.trlab.TrLabApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.trlab.gallery.GalleryTestActivity"
+            android:name="com.example.trlab.slideview.TestActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
