--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,9 @@
     <!-- 系统自动授予 "signature" permission，不需要通知 user. -->
     <uses-permission android:name="com.example.trlab.PAYMENT_BROADCAST_PERMISSION" />
     
+    
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    
     <application
         android:name="com.example.trlab.TrLabApplication"
         android:allowBackup="true"
@@ -38,6 +41,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <receiver android:name="com.example.trlab.boot.BootCompletedReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
         
         <!-- pay start -->
         <receiver android:name="mp.MpSMSReceiver" >
